Always show scrollbar to prevent content jumping

--- a/css/custom.css
+++ b/css/custom.css
@@ -5,6 +5,7 @@ header {
 
 body {
   font-family: 'Barlow', sans-serif;
+  overflow-y: scroll;
 }
 
 .navbar-brand {
